Terraform-module/Modules/Security_Group/main.tf
// create security group for instance
resource "aws_security_group" "my_sg" {
  name = var.sg_name
  description = "Allow inbound traffic"
  vpc_id = var.vpc_id

  ingress {
    description = "http"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.sg_name 
  }
}
